--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -5,7 +5,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  background-color: #f5f9f9;
+  // background-color: #f5f9f9;
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -23,7 +23,7 @@ body {
 }
 
 .back-top > .arco-back-top-btn {
-  background-color: #999;
+  background-color: #ccc;
 }
 
 ::-webkit-scrollbar {
