--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -26,31 +26,21 @@ body {
   background-color: #ccc;
 }
 
-::-webkit-scrollbar {
-  /*滚动条整体样式*/
-  width: 5px; /*高宽分别对应横竖滚动条的尺寸*/
-  height: 1px;
-}
+// ::-webkit-scrollbar {
+//   /*滚动条整体样式*/
+//   width: 5px; /*高宽分别对应横竖滚动条的尺寸*/
+//   height: 0;
+// }
 
-::-webkit-scrollbar-thumb {
-  /*滚动条里面小方块*/
-  border-radius: 10px;
-  background-color: skyblue;
-  background-image: -webkit-linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.2) 25%,
-    transparent 25%,
-    transparent 50%,
-    rgba(255, 255, 255, 0.2) 50%,
-    rgba(255, 255, 255, 0.2) 75%,
-    transparent 75%,
-    transparent
-  );
-}
+// ::-webkit-scrollbar-thumb {
+//   /*滚动条里面小方块*/
+//   border-radius: 10px;
+//   background-color: #ccc;
+// }
 
-::-webkit-scrollbar-track {
-  /*滚动条里面轨道*/
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-  background: #ededed;
-  border-radius: 10px;
-}
+// ::-webkit-scrollbar-track {
+//   /*滚动条里面轨道*/
+//   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+//   background: #fff;
+//   border-radius: 10px;
+// }
