--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,5 +1,3 @@
-/* ------ 页面滚动条样式， 滚动时显示滚动条， 不滚动时隐藏  Start -----*/
-
 html {
   overflow: -moz-hidden-unscrollable;
   height: 100%;
@@ -16,4 +14,22 @@ body {
   overflow: auto;
 }
 
-/* ------ 页面滚动条样式， 滚动时显示滚动条， 不滚动时隐藏  End -----*/
+::-webkit-scrollbar-track-piece {
+  background: transparent;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  min-height: 50px;
+  background: #ccc;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ababab;
+}
